# motionPrimitives

./: .gitignore  CMakeLists.txt  README.md
ProMP/: CMakeLists.txt  ProMP.cpp  ProMP.hpp  ProMP_LearnEx.cpp  ProMP_LoadEx.cpp  dataHandle.hpp
include/: dataHandle.hpp
include/ProMP/: ProMP.hpp
src/ProMP/: ProMP.cpp  ProMP_Test.cpp
testData/: MP.csv  output.csv
